<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ROSEpredesignActivity!</string>
    <string name="app_name">ROSEpredesign</string>

    <!-- user preference -->
    <string name="preference_section_user">User Setting</string>

    <string name="key_userlogin">UserLogin</string>
    <string name="text_userlogin">Keep me logged in</string>
    
    <string name="key_searchhistory">SearchHistory</string>
    <string name="text_searchhistory">Save searching history</string>
	
	<string name="key_viewhistory">ViewHistory</string>
    <string name="text_viewhistory">Save browsing history</string>    
    
    
    <string name="preferece_section_view">App Setting</string>
	
    <string name="key_language">Language</string>
    <string name="text_language">Language</string>
    <string-array name="list_language">
        <item>English</item>
        <item>简体中文</item>
        <item>繁體中文</item>
    </string-array>
    <string-array name="list_languageValue">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    
    <string name="key_viewimage">ViewImage</string>
    <string name="text_viewimage">Load Image For Products</string>

	<string name="key_cachesize">CacheSize</string>
	<string name="text_cachesize">Set Cache Size (in MB)</string>
	
	<!-- search -->
	<string name="search_hint">Search products</string>
	<string name="search_button_text">Search</string>
	<string name="search_voice_hint">You are using voice search</string>
</resources>